[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/SceneScripts/BoardMP.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Classes/Hand.gd" type="Script" id=2]
[ext_resource path="res://Scenes/HealthNode.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI/CardsLeftIndicator.tscn" type="PackedScene" id=4]

[node name="Board" type="Node2D"]
script = ExtResource( 1 )

[node name="Creatures_A" type="Node2D" parent="."]
position = Vector2( 0, 100 )

[node name="Creatures_B" type="Node2D" parent="."]
position = Vector2( 0, -100 )

[node name="GraveHolder" type="Node2D" parent="."]
position = Vector2( 346, 0 )

[node name="DeckHolder" type="Node2D" parent="."]
position = Vector2( 446, 0 )

[node name="Card_A_Holder" type="Node2D" parent="."]
position = Vector2( 0, 268 )
script = ExtResource( 2 )

[node name="Card_B_Holder" type="Node2D" parent="."]
position = Vector2( 0, -268 )
script = ExtResource( 2 )

[node name="HealthNode" parent="." instance=ExtResource( 3 )]
position = Vector2( -350, 100 )

[node name="HealthNode2" parent="." instance=ExtResource( 3 )]
position = Vector2( -350, -100 )

[node name="Fusion_Holder" type="Node2D" parent="."]

[node name="CardsLeftIndicator_A" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 184 )

[node name="CardsLeftIndicator2_B" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 0, -184 )
